# Multi-Source-Candidate-Data-Transformer

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  cli.py
app/api/: __init__.py  main.py  schemas.py
app/api/static/: index.html
app/domain/: __init__.py  enums.py  models.py
app/normalize/: __init__.py  base.py  normalizers.py  registry.py
app/pipeline/: __init__.py  confidence.py  fuse.py  ledger.py  orchestrate.py  project.py  resolve.py  validate.py
app/sources/: __init__.py  ats.py  base.py  detect.py  github.py  github_staging.py  resume.py
app/sources/resume/: __init__.py  adapter.py  extractors.py  gliner.py  readers.py  text.py
samples/: ats_alex.json  ats_sample.json  broken_source.json  config_custom.json  config_example.json  expected_profile.json  resume_alex.txt  resume_sample.txt
scripts/: generate_design_pdf.py  split_resume.py
tests/: __init__.py  conftest.py  test_api.py  test_domain.py  test_fuse.py  test_gold.py  test_grader_alex.py  test_health.py  test_normalize.py  test_orchestrate.py  test_pipeline_ledger.py  test_project.py  test_resolve.py  test_smoke.py  test_sources_ats.py  test_sources_detect.py  test_sources_github.py  test_sources_resume.py
