[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "candidate-transformer"
version = "0.1.0"
description = "Multi-source candidate data transformer: merge messy sources into one provenanced, confidence-scored canonical profile."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2",
    "fastapi",
    "uvicorn[standard]",
    "phonenumbers",
    "pdfplumber",
    "python-docx",
    "gliner",
    "python-multipart",
    "typing-extensions>=4.6",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "pytest",
    "httpx",
]

[project.scripts]
candidate-transformer = "app.cli:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_any_explicit = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = ["pdfplumber.*", "docx.*", "gliner.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/test_sources_resume.py" = ["RUF001", "E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency markers are designed to be called in argument defaults.
extend-immutable-calls = ["fastapi.File", "fastapi.Form", "fastapi.Query", "fastapi.Depends"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "no_gliner_mock: disable autouse GLiNER mock for tests that exercise chunked prediction",
]
